--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "check whether value is undefined or empty or null",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "ava"
   },
   "repository": {
     "type": "git",
