--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "validation",
     "data validation",
     "object empty checking",
-    "array empty checking"
+    "array empty checking",
+    "is array",
+    "is object",
+    "is number",
+    "is boolean",
+    "is string"
   ],
   "author": "christyram99",
   "license": "ISC",
