added new keywords for object empty and array empty

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "data validation",
     "object empty checking",
     "array empty checking",
+    "isArrayEmpty",
+    "isEmptyArray",
+    "isObjectEmpty",
+    "isEmptyObject",
     "is array",
     "is object",
     "is number",
